--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "learn-typescript-develop",
   "scripts": {
-    "compile": "tsc"
+    "dev": "vite",
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.16.3",
+    "vite": "^4.3.4"
   }
 }
